--- a/sort/sort.css
+++ b/sort/sort.css
@@ -1,6 +1,20 @@
 body {
   background-color: black;
-  color: aquamarine;
+  color: rgba(31, 236, 236, 0.897);
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  border: 0;
+}
+button {
+  background: rgba(26, 207, 207, 0.801);
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
+.cntr {
+  text-align: center;
 }
 
 ul {
